--- a/.github/workflows/update-prs.yaml
+++ b/.github/workflows/update-prs.yaml
@@ -19,6 +19,9 @@ on:
     - cron: "0 0 */2 * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-readme:
     runs-on: ubuntu-latest
@@ -49,8 +52,8 @@ jobs:
       - name: Commit and push if changed
         if: steps.git-check.outputs.changes == 'true'
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git add README.md
           git commit -m "Update latest PRs and Gists in README"
           git push
